tests/ui/const-generics/occurs-check/unused-substs-4.stderr
error[E0308]: mismatched types
  --> $DIR/unused-substs-4.rs:10:11
   |
LL | fn bind<const N: usize>(value: [u8; N]) -> [u8; 3 + 4] {
   |                                            ----------- help: consider changing bind's return type: `[u8; _]`
...
LL |     arr = bind(arr);
   |           ^^^^^^^^^ encountered a self-referencing constant
   |
note: the function bind is defined here
  --> $DIR/unused-substs-4.rs:4:1
   |
LL | fn bind<const N: usize>(value: [u8; N]) -> [u8; 3 + 4] {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
